AirquipUAT/force-app/main/default/objects/Knowledge_Search_Config__mdt/Knowledge_Search_Config__mdt.object-meta.xml
<CustomObject>
    <description>Maps each object to the field used for knowledge article suggestions.</description>
    <label>Knowledge Search Config</label>
    <pluralLabel>Knowledge Search Configs</pluralLabel>
</CustomObject>