AirquipUAT/force-app/main/default/objects/Knowledge_Search_Config__mdt/fields/Description_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Description_Field_API_Name__c</fullName>
    <description>Optional second field for broader matching, e.g. Description</description>
    <label>Description Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>