AirquipUAT/force-app/main/default/objects/Knowledge_Search_Config__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API name of the object, e.g. Case or My_Custom_Object__c</description>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>