AirquipUAT/force-app/main/default/objects/Knowledge_Search_Config__mdt/fields/Search_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Search_Field_API_Name__c</fullName>
    <description>Field used to match knowledge articles, e.g. Subject or Name</description>
    <label>Search Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>